--- a/omp/ompt_callbacks.yaml
+++ b/omp/ompt_callbacks.yaml
@@ -17,10 +17,8 @@ ompt_callback_target:
   - ompt_callback_target
 ompt_callback_target_data_op:
   - ompt_callback_target_data_op
-  - ompt_callback_target_data_op_intel
 ompt_callback_target_submit:
   - ompt_callback_target_submit
-  - ompt_callback_target_submit_intel
 ompt_callback_device_initialize:
   - ompt_callback_device_initialize
 ompt_callback_device_finalize:
@@ -67,5 +65,9 @@ ompt_callback_target_emi:
   - ompt_callback_target_emi
 ompt_callback_target_data_op_emi:
   - ompt_callback_target_data_op_emi
+ompt_callback_target_submit_emi:
+  - ompt_callback_target_submit_emi
+ompt_callback_target_map_emi:
+  - ompt_callback_target_map_emi
 ompt_callback_error:
   - ompt_callback_error
