--- a/omp/Makefile.am
+++ b/omp/Makefile.am
@@ -181,7 +181,7 @@ nodist_libOMPInterval_la_SOURCES = \
 
 libOMPInterval_la_SOURCES = \
 	btx_ompinterval_callbacks.cpp \
-	$(top_srcdir)/utils/magic_enum.hpp
+	$(top_srcdir)/utils/include/magic_enum.hpp
 
 libOMPInterval_la_CPPFLAGS = -I$(top_srcdir)/utils -I$(top_srcdir)/utils/include -I./modified_include -I./ -I./btx_filter_omp
 libOMPInterval_la_CFLAGS = -Wall -Wextra -Wno-unused-parameter $(WERROR) $(BABELTRACE2_CFLAGS)
