--- a/xprof/Makefile.am
+++ b/xprof/Makefile.am
@@ -180,8 +180,8 @@ $(BTX_INTERVAL_GENERATED_SOURCE_TEST) &: $(srcdir)/btx_interval_model.yaml
 	$(METABABEL) -d $(srcdir)/btx_interval_model.yaml -t SOURCE  -o btx_source_interval_test -p intervaltest -c test
 
 noinst_LTLIBRARIES = libtestintervalsource.la
-libtestintervalsource_la_SOURCES = $(BTX_INTERVAL_GENERATED_SOURCE_TEST)
-libtestintervalsource_la_CPPFLAGS = -I$(top_srcdir)/utils -I$(top_srcdir)/utils/include -I$(srcdir)/include -I$(srcdir)/btx_source_interval_test/
+nodist_libtestintervalsource_la_SOURCES = $(BTX_INTERVAL_GENERATED_SOURCE_TEST)
+libtestintervalsource_la_CPPFLAGS = -I$(top_srcdir)/utils -I$(top_srcdir)/utils/include -I$(srcdir)/include -I./btx_source_interval_test/
 libtestintervalsource_la_CFLAGS = -fPIC -Wall -Wextra -Wno-unused-parameter $(WERROR) $(BABELTRACE2_CFLAGS)
 
 BTX_AGGREG_GENERATED_SOURCE_TEST = \
@@ -196,24 +196,27 @@ $(BTX_AGGREG_GENERATED_SOURCE_TEST) &: $(srcdir)/btx_aggreg_model.yaml
 	$(METABABEL) -d $(srcdir)/btx_aggreg_model.yaml -t SOURCE  -o btx_source_aggreg_test -p aggregtest -c test
 
 noinst_LTLIBRARIES += libtestaggregsource.la
-libtestaggregsource_la_SOURCES = $(BTX_AGGREG_GENERATED_SOURCE_TEST)
-libtestaggregsource_la_CPPFLAGS = -I$(top_srcdir)/utils -I$(top_srcdir)/utils/include -I$(srcdir)/include -I$(srcdir)/btx_source_aggreg_test/
+nodist_libtestaggregsource_la_SOURCES = $(BTX_AGGREG_GENERATED_SOURCE_TEST)
+libtestaggregsource_la_CPPFLAGS = -I$(top_srcdir)/utils -I$(top_srcdir)/utils/include -I$(srcdir)/include -I./btx_source_aggreg_test/
 libtestaggregsource_la_CFLAGS = -fPIC -Wall -Wextra -Wno-unused-parameter $(WERROR) $(BABELTRACE2_CFLAGS)
+
 
 TRACE_COMMON = \
 	tests/interval_to_aggreg.thapi_interval_text_pretty \
 	tests/aggreg_to_tally.thapi_aggreg_text_pretty
 
-TRACE_OUT = $(TRACE_COMMON:.*=.bt_text_pretty)
+TRACE_OUT = \
+        tests/interval_to_aggreg.bt_text_pretty \
+        tests/aggreg_to_tally.bt_text_pretty
 
 TESTS = \
 	$(TRACE_COMMON)
 
 TEST_EXTENSIONS = .thapi_interval_text_pretty .thapi_aggreg_text_pretty
 THAPI_INTERVAL_TEXT_PRETTY_LOG_COMPILER = $(top_builddir)/utils/test_wrapper_thapi_text_pretty.sh
-AM_THAPI_INTERVAL_TEXT_PRETTY_LOG_FLAGS = xprof interval ./btx_source_interval_test/ .libs/libtestintervalsource.a
+AM_THAPI_INTERVAL_TEXT_PRETTY_LOG_FLAGS = xprof interval btx_source_interval_test/ .libs/libtestintervalsource.a
 THAPI_AGGREG_TEXT_PRETTY_LOG_COMPILER = $(top_builddir)/utils/test_wrapper_thapi_text_pretty.sh
-AM_THAPI_AGGREG_TEXT_PRETTY_LOG_FLAGS = xprof aggreg ./btx_source_aggreg_test/ .libs/libtestaggregsource.a
+AM_THAPI_AGGREG_TEXT_PRETTY_LOG_FLAGS = xprof aggreg btx_source_aggreg_test/ .libs/libtestaggregsource.a
 
 check_DATA = \
 	$(TRACE_COMMON)
