--- a/utils/test_wrapper_thapi_text_pretty.sh.in
+++ b/utils/test_wrapper_thapi_text_pretty.sh.in
@@ -1,6 +1,11 @@
 #!/usr/bin/env bash
 #
-# Usage: test_wrapper_thapi_text_pretty.sh backend archive /path/to/log.thapi_text_pretty
+# Usage: test_wrapper_thapi_text_pretty.sh subdir backend archive /path/to/log
+#
+# Input log file can have any extension, to support passing different args for
+# different tests. File with expected output to diff against must have the same
+# with extension changed to ".bt_text_pretty", and be in the babeltrace2 text
+# pretty format.
 #
 set -euxo pipefail
 
@@ -13,13 +18,20 @@ source_archive="$4"
 input_thapi_text_pretty="$5"
 
 # Generated tmp folder
-folder_name="tests/"$(basename "${input_thapi_text_pretty}" .thapi_text_pretty)
+folder_name="tests/"$(basename "${input_thapi_text_pretty%.*}")
 mkdir -p "${folder_name}"
 
 # Generate source callback and link plugin
 source_callback_c="${folder_name}/callback.c"
 
-@top_srcdir@/utils/thapi_log_to_bt_source_component.rb -y "@top_builddir@/${subdir}/btx_${be}_model.yaml" \
+if [ "${subdir}" = "xprof" ]; then
+  model="@top_srcdir@/${subdir}/btx_${be}_model.yaml"
+else
+  model="@top_builddir@/${subdir}/btx_${be}_model.yaml"
+fi
+
+@top_srcdir@/utils/thapi_log_to_bt_source_component.rb \
+  -y "${model}" \
   -i "${input_thapi_text_pretty}" -o "${source_callback_c}"
 
 modified_include_arg=""
@@ -44,13 +56,25 @@ fi
 
 current_output_bt_text_pretty="${folder_name}/current.bt_text_pretty"
 
-ln -f @top_builddir@/${subdir}/.libs/lib"${be^^}"Interval.so "${folder_name}/"
+if [ "${be}" = "interval" ]; then
+  test_component=filter.btx_aggreg.aggreg
+  lib_name=libXAggreg.so
+elif [ "${be}" = "aggreg" ]; then
+  test_component=sink.btx_tally.tally
+  lib_name=libXTally.so
+else
+  test_component=filter."${be}"interval.interval
+  lib_name=lib"${be^^}"Interval.so
+fi
+
+ln -f @top_builddir@/${subdir}/.libs/"${lib_name}" "${folder_name}/"
+
 ${bt2_cmd} --plugin-path="${folder_name}" \
   --component=source."${be}"test.test \
-  --component=filter."${be}"interval.interval \
+  --component="${test_component}" \
   > "${current_output_bt_text_pretty}"
 
-diff "${input_thapi_text_pretty/.thapi_text_pretty/.bt_text_pretty}" "${current_output_bt_text_pretty}"
+diff "${input_thapi_text_pretty%.*}.bt_text_pretty" "${current_output_bt_text_pretty}"
 
 # Remove tmp file
 rm -rf "${folder_name}"
