--- a/omp/Makefile.am
+++ b/omp/Makefile.am
@@ -5,7 +5,6 @@ if STRICT
 else
   WERROR =
 endif
-LTTNG_FLAGS=-fPIC -Wall -Wextra -Wno-unused-parameter -Wno-type-limits -Wno-sign-compare $(WERROR) -I$(top_srcdir)/utils -I$(top_srcdir)/utils/include -I./modified_include -I../utils -I./
 
 OMP_HDR = \
 	$(srcdir)/include/omp-tools.h
@@ -131,7 +130,8 @@ nodist_libompttracepoints_la_SOURCES = \
 	$(OMP_PROBES_INCL) \
 	$(OMP_PROBES_SRC)
 
-libompttracepoints_la_CFLAGS = $(LTTNG_FLAGS) $(LTTNG_UST_CFLAGS)
+libompttracepoints_la_CPPFLAGS = -I$(top_srcdir)/utils -I$(top_srcdir)/utils/include -I./modified_include -I../utils -I./ 
+libompttracepoints_la_CFLAGS = -fPIC -Wall -Wextra -Wno-unused-parameter -Wno-type-limits -Wno-sign-compare $(WERROR) $(LTTNG_UST_CFLAGS)
 libompttracepoints_la_LDFLAGS = $(LTTNG_UST_LIBS)
 
 lib_LTLIBRARIES = libTracerOMPT.la libOMPInterval.la
@@ -157,9 +157,6 @@ uninstall-hook:
 	$(RM) -f $(DESTDIR)$(pkglibdir)/bt2/libOMPInterval.so
 	-rmdir $(DESTDIR)$(pkglibdir)/bt2
 
-xprof_utils.cpp: $(top_srcdir)/utils/xprof_utils.cpp
-	cp $< $@
-
 xprof_utils.hpp: $(top_srcdir)/utils/xprof_utils.hpp
 	cp $< $@
 
@@ -167,7 +164,6 @@ EXTRA_DIST += ompt.h.include
 
 CLEANFILES += \
 	$(BTX_OMP_GENERATED) \
-	xprof_utils.cpp \
 	xprof_utils.hpp
 
 BUILT_SOURCES += \
@@ -176,8 +172,7 @@ BUILT_SOURCES += \
 
 nodist_libOMPInterval_la_SOURCES = \
 	$(BTX_OMP_GENERATED) \
-	xprof_utils.hpp \
-	xprof_utils.cpp
+	xprof_utils.hpp
 
 libOMPInterval_la_SOURCES = \
 	btx_ompinterval_callbacks.cpp \
