--- a/opencl/Makefile.am
+++ b/opencl/Makefile.am
@@ -228,14 +228,9 @@ libCLInterval_la_CFLAGS = -Wall -Wextra -Wno-unused-parameter $(WERROR) $(BABELT
 libCLInterval_la_CXXFLAGS = -std=c++17 -Wall -Wextra -Wno-unused-parameter $(WERROR) $(BABELTRACE2_CFLAGS)
 libCLInterval_la_LDFLAGS = $(BABELTRACE2_LIBS) -avoid-version -module
 
-tests/.tag:
-	mkdir -p tests
-	touch tests/.tag
-
 clean-local:
-	$(RM) -r tests
-
-CLEANFILES += tests/.tag
+	$(RM) -r btx_source_cl_test
+	$(RM) -r btx_filter_opencl
 
 TRACE_COMMON = \
 	tests/api_call.thapi_text_pretty \
