--- a/ze/Makefile.am
+++ b/ze/Makefile.am
@@ -57,7 +57,8 @@ $(MODIFIED_ZE_HDR) &: $(ZE_HDR) $(srcdir)/headers.patch
 
 clean-local:
 	$(RM) -r modified_include
-	$(RM) -r tests
+	$(RM) -r btx_source_ze_test
+	$(RM) -r btx_filter_ze
 
 EXTRA_DIST += \
 	$(srcdir)/include \
@@ -257,12 +258,6 @@ libZEInterval_la_CPPFLAGS = -I$(top_srcdir)/utils -I$(top_srcdir)/utils/include 
 libZEInterval_la_CFLAGS = -Wall -Wextra -Wno-unused-parameter $(WERROR) $(BABELTRACE2_CFLAGS)
 libZEInterval_la_CXXFLAGS = -std=c++17 -Wall -Wextra -Wno-unused-parameter $(WERROR) $(BABELTRACE2_CFLAGS)
 libZEInterval_la_LDFLAGS = $(BABELTRACE2_LIBS) -avoid-version -module
-
-tests/.tag:
-	mkdir -p tests
-	touch tests/.tag
-
-CLEANFILES += tests/.tag
 
 TRACE_COMMON = \
 	tests/interval_profiling_normal.thapi_text_pretty \
